# air-quality

./: .gitignore  pyproject.toml
app/: api.py  config.py  main.py
app/data/: api.py
app/health/: api.py  router.py
app/services/data_loader/: data_loader.py
